Fix : Don't apply fill adjustment when stroking a character.

DETAILS :

Bug 687667 "Line width in a Type 1 stroked font".

EXPECTED DIFFERENCES :

-r300 CAT_LOGO.ps

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5392 a1074d23-0009-0410-80fe-cf8c14f379e6